# tmp

./: .gitignore  Cargo.toml  Makefile  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  workflow.py
.tmp_config/schemas/: test_workflow.json
crates/command/src/: lib.rs
crates/tmp-agent/: Cargo.toml  challenger_test.py  stress_concurrency.py  stress_test.py
crates/tmp-agent/src/: lib.rs  main.rs
crates/tmp-agent/tests/: integration_tests.rs
docs/: getting_started.md  library_usage.md  specifications.md  workflows.md
docs/whitepaper/: README.md  benchmark-plan.md  benchmark-runs.schema.json  tool-mapping-protocol.md
scripts/: render-whitepaper.sh
tests/: e2e_tier1.rs  e2e_tier2.rs  e2e_tier3.rs  e2e_tier4.rs
tests/common/: mod.rs
tmp/: Cargo.toml
tmp-core/: Cargo.toml
tmp-core/src/: compile.rs  compile_tests.rs  config.rs  config_tests.rs  context.rs  context_tests.rs  generate.rs  help.rs  lib.rs  llm.rs  registry.rs  registry_tests.rs  resolve.rs  resolve_tests.rs  resolver.rs  resolver_tests.rs  run.rs  run_tests.rs  schema.rs  schema_tests.rs  versioning.rs
tmp/src/: main.rs  main_tests.rs
tmp/src/commands/: compile.rs  generate.rs  init.rs  init_agent.rs  mod.rs  registry.rs  resolve.rs  run.rs  schema.rs  workflow.rs
tmp/src/tui/: verify.rs
