[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

[dependencies]
tmp-core = { path = "../tmp-core" }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ureq = { version = "2.9", features = ["json"] }
notify = "6.1.1"
ratatui = "0.26"
crossterm = "0.27"
command = { path = "../crates/command" }


[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "e2e_tier1"
path = "../tests/e2e_tier1.rs"

[[test]]
name = "e2e_tier2"
path = "../tests/e2e_tier2.rs"

[[test]]
name = "e2e_tier3"
path = "../tests/e2e_tier3.rs"

[[test]]
name = "e2e_tier4"
path = "../tests/e2e_tier4.rs"
